Work on tests and error handling
